@@ -1,11 +1,0 @@
-syntax:glob
-
-.project
-.pydevproject
-.idea
-.tox
-__pycache__
-*.pyc
-*.pyo
-*.egg-info
-docs/_build/
